added briefs descriptions for the help command

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "name": "Python: Current File",
             "type": "python",
-            "request": "python3",
+            "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal"
         }
